--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitador.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitador.jrxml
@@ -3,6 +3,12 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<parameter name="FECHAINICIO" class="java.lang.String"/>
+	<parameter name="FECHAFIN" class="java.lang.String"/>
+	<parameter name="USUARIO" class="java.lang.String"/>
+	<parameter name="IMAGE_PATH" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString language="SQL">
 		<![CDATA[SELECT
      capacitador.`codigocapacitador` AS capacitador_codigocapacitador,
@@ -31,23 +37,23 @@ FROM
 		<band/>
 	</background>
 	<title>
-		<band height="85">
+		<band height="123">
 			<textField>
-				<reportElement x="459" y="30" width="74" height="20" uuid="381ade50-b892-440a-9f60-ac9752613405"/>
+				<reportElement x="459" y="60" width="74" height="20" uuid="381ade50-b892-440a-9f60-ac9752613405"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="505" y="65" width="70" height="20" uuid="5fb20cd9-d5af-4494-8485-fe34e1872912"/>
+				<reportElement x="506" y="83" width="70" height="20" uuid="5fb20cd9-d5af-4494-8485-fe34e1872912"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="418" y="65" width="114" height="20" uuid="df2e868f-1920-437e-a2e8-b629d7dd1694"/>
+				<reportElement x="391" y="83" width="114" height="20" uuid="df2e868f-1920-437e-a2e8-b629d7dd1694"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -67,10 +73,6 @@ FROM
 				</textElement>
 				<text><![CDATA[REPORTE DE CAPACITADORES]]></text>
 			</staticText>
-			<image>
-				<reportElement x="-5" y="0" width="105" height="50" uuid="f0282b78-cee0-4812-9a11-fcda8bf7762a"/>
-				<imageExpression><![CDATA["C:\\Users\\developer\\Documents\\NetBeansProjectsE\\SISADMRH\\target\\classes\\static\\image\\mjsp.png"]]></imageExpression>
-			</image>
 			<staticText>
 				<reportElement x="138" y="20" width="265" height="20" uuid="73dabb7b-2083-466a-bc66-04e0d1d02f42"/>
 				<textElement textAlignment="Center">
@@ -79,55 +81,109 @@ FROM
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="533" y="30" width="26" height="20" uuid="0e4a0f73-d910-4993-b03e-1b1f92695f7d"/>
+				<reportElement x="533" y="60" width="26" height="20" uuid="0e4a0f73-d910-4993-b03e-1b1f92695f7d"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement positionType="FixRelativeToBottom" x="-40" y="82" width="615" height="3" uuid="f0db306d-0ca2-42d3-9870-2a7b4454a9c2"/>
-			</line>
+			<textField>
+				<reportElement x="111" y="85" width="100" height="20" uuid="d6e71bd6-1338-4325-8f1f-f930ffda16ba"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="225" y="85" width="39" height="20" uuid="009281ea-aadf-4969-bc06-5909ec18c5db"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="61" y="85" width="39" height="20" uuid="b9dd5fa4-1069-4c39-b64d-2ac7f4476240"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<text><![CDATA[Desde:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="437" y="103" width="39" height="20" uuid="28b28125-10b9-419f-897a-3b2ac3051788"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<text><![CDATA[Usuario:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="476" y="103" width="100" height="20" uuid="367640ed-9134-4e33-96a4-9b970151d75e"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="277" y="85" width="100" height="20" uuid="91f40ec5-61ec-441f-9ff0-423a22f05acd"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
+			</textField>
+			<image>
+				<reportElement x="0" y="20" width="143" height="38" uuid="93a0189e-aae1-45b9-9927-e19e102e9ae3"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="418" y="10" width="123" height="48" uuid="5a44a052-5746-4181-bbdf-c8df2e4e26b6"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="4" y="83" width="39" height="20" uuid="51dcab81-c76a-4166-a63d-18beb65577c5"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<text><![CDATA[rpt_cator]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
 		<band/>
 	</pageHeader>
 	<columnHeader>
-		<band height="21">
-			<line>
-				<reportElement x="-20" y="20" width="595" height="1" forecolor="#666666" uuid="89e61ee6-0a34-49c2-baa2-2464d007d21b"/>
-			</line>
+		<band height="38">
+			<rectangle>
+				<reportElement x="0" y="18" width="552" height="20" backcolor="#FFFFFF" uuid="88708dc7-3fb2-43b9-88cf-eef3dd410f4e"/>
+			</rectangle>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="0" width="100" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="5bad4120-5e48-417e-93e9-744284a3fe27"/>
+				<reportElement mode="Transparent" x="0" y="18" width="100" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="5bad4120-5e48-417e-93e9-744284a3fe27"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Capacitador]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="110" y="0" width="101" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="90329b24-197c-409f-ad29-8bb7c4f12749"/>
+				<reportElement mode="Transparent" x="110" y="18" width="101" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="90329b24-197c-409f-ad29-8bb7c4f12749"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tipo Capacitador]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="221" y="0" width="85" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="4bed08c9-10e1-4d1b-8112-5d8cdbc2fdcd"/>
+				<reportElement mode="Transparent" x="221" y="18" width="85" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="4bed08c9-10e1-4d1b-8112-5d8cdbc2fdcd"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Telefono Movil]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="306" y="0" width="112" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="e5b0ded0-c0d8-4746-a333-f306e0fe286e"/>
+				<reportElement mode="Transparent" x="306" y="18" width="112" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="e5b0ded0-c0d8-4746-a333-f306e0fe286e"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Email]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="418" y="0" width="134" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="a80af39f-1e86-4180-8969-4323788b37d3"/>
+				<reportElement mode="Transparent" x="418" y="18" width="134" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="a80af39f-1e86-4180-8969-4323788b37d3"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
