--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
@@ -3,6 +3,12 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<parameter name="FECHAFIN" class="java.lang.String"/>
+	<parameter name="FECHAINICIO" class="java.lang.String"/>
+	<parameter name="USUARIO" class="java.lang.String"/>
+	<parameter name="IMAGE_PATH" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString language="SQL">
 		<![CDATA[SELECT e.codigoempleado,e.nombreempleado,e.apellidoempleado,p.nombrepuesto,p.ubicacionpuesto,c.fechainiciocontrato,c.salarioactual FROM `empleado` e, puesto p, contrato c where e.codigoempleado=c.codigoempleado and e.codigopuesto=p.codigopuesto]]>
 	</queryString>
@@ -31,9 +37,9 @@
 		<band/>
 	</background>
 	<title>
-		<band height="77">
+		<band height="131">
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="495" y="50" width="70" height="20" uuid="20bb02c0-d567-44d4-b2c4-4c0ea68070ae"/>
+				<reportElement x="494" y="80" width="70" height="20" uuid="20bb02c0-d567-44d4-b2c4-4c0ea68070ae"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -54,7 +60,7 @@
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="464" y="30" width="74" height="20" uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4"/>
+				<reportElement x="463" y="60" width="74" height="20" uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -67,81 +73,131 @@
 				</textElement>
 				<text><![CDATA[REPORTE DE NUEVAS CONTRATACIONES]]></text>
 			</staticText>
-			<image>
-				<reportElement x="0" y="0" width="105" height="50" uuid="1c4c2fac-f6a1-4e5a-8a81-ce695f020a48"/>
-				<imageExpression><![CDATA["C:\\Users\\developer\\Documents\\NetBeansProjectsE\\SISADMRH\\target\\classes\\static\\image\\mjsp.png"]]></imageExpression>
-			</image>
 			<textField evaluationTime="Report">
-				<reportElement x="538" y="30" width="26" height="20" uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81"/>
+				<reportElement x="537" y="60" width="26" height="20" uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="408" y="50" width="114" height="20" uuid="8cae14a6-c433-461f-a07b-c8abf6c60049"/>
+				<reportElement x="407" y="80" width="114" height="20" uuid="8cae14a6-c433-461f-a07b-c8abf6c60049"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
-			<line>
-				<reportElement positionType="FixRelativeToBottom" x="-40" y="70" width="615" height="3" uuid="7cfff881-b3ec-4fac-aa0c-07333397cc37"/>
-			</line>
+			<staticText>
+				<reportElement x="416" y="98" width="39" height="20" uuid="8db62085-9fe6-4b69-b055-d239c583ecf5"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<text><![CDATA[Usuario:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="251" y="80" width="39" height="20" uuid="f8a6159b-88a9-44b2-aa21-e0b4af67a7c3"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="303" y="80" width="100" height="20" uuid="4d3e6229-3bd2-4216-b109-467a1c5008f8"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="455" y="98" width="100" height="20" uuid="3f676349-db7f-408e-88f1-b1850570b533"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="87" y="80" width="39" height="20" uuid="17454eab-9cc6-4f5e-91a6-0bc0832a2b43"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<text><![CDATA[Desde:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="137" y="80" width="100" height="20" uuid="664f04b5-48d9-405f-b80d-da039a387770"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
+			</textField>
+			<image>
+				<reportElement x="418" y="10" width="123" height="48" uuid="a2ddf854-1451-44aa-ad8f-8c7a824aaf93"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="0" y="20" width="143" height="38" uuid="c6efa9b9-a500-4a0f-bb16-409eeac06829"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="0" y="80" width="39" height="20" uuid="e7d9fc24-1992-422f-a262-0dec7e9bcb4b"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
+				<text><![CDATA[rpt_cont]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
 		<band/>
 	</pageHeader>
 	<columnHeader>
-		<band height="21">
-			<line>
-				<reportElement x="-20" y="20" width="595" height="1" forecolor="#666666" uuid="e6b04935-ab29-4f72-8098-5bd061f00d71"/>
-			</line>
+		<band height="38">
+			<rectangle>
+				<reportElement x="0" y="4" width="553" height="28" backcolor="#FFFFFF" uuid="5d2c9f60-e28f-42c9-bf6c-cd5f2a0cf21d"/>
+			</rectangle>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="0" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="695f1588-5de8-455b-aed9-ed6c73eeb60a"/>
+				<reportElement mode="Transparent" x="0" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="695f1588-5de8-455b-aed9-ed6c73eeb60a"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Codigo Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="79" y="0" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="e4e66651-0c88-4063-a2c0-741ac227aa51"/>
+				<reportElement mode="Transparent" x="79" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="e4e66651-0c88-4063-a2c0-741ac227aa51"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="158" y="0" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="476bd057-2959-4fa7-9b41-faaa022761ca"/>
+				<reportElement mode="Transparent" x="158" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="476bd057-2959-4fa7-9b41-faaa022761ca"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Apellido]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="237" y="0" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="b0756311-fe34-46f7-a804-a9a7437a9df2"/>
+				<reportElement mode="Transparent" x="237" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="b0756311-fe34-46f7-a804-a9a7437a9df2"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cargo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="316" y="0" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="f41035a0-5ba4-4fb1-8489-c2679cd44b21"/>
+				<reportElement mode="Transparent" x="316" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="f41035a0-5ba4-4fb1-8489-c2679cd44b21"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ubicacion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="395" y="0" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="903c871b-fffd-439e-a5d2-46927fe1b1a5"/>
+				<reportElement mode="Transparent" x="395" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="903c871b-fffd-439e-a5d2-46927fe1b1a5"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de Contratacion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="474" y="0" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="dfb2173e-502c-43cf-bf60-fb49c1260741"/>
+				<reportElement mode="Transparent" x="474" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="dfb2173e-502c-43cf-bf60-fb49c1260741"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10" isBold="true"/>
 				</textElement>
